<resources>
    <string name="app_name">GI-Clinic</string>
    <string name="home">Home</string>
    <string name="making_life_easier">GI-Clinic</string>
    <string name="attendance">Drama</string>
    <string name="Records">Trending</string>
    <string name="todo">Movies</string>
    <string name="User_database">Sliders</string>
    <string name="movies">Movies</string>
    <string name="sliders">Sliders</string>
    <string name="trending">Trending</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="http">https://</string>
    <string name="enter_video_url">Enter Video Url</string>
    <string name="extended_fab_content_desc">New drama</string>
    <string name="extended_fab_label">New drama</string>
    <string name="dummy">Selected Image</string>
    <string name="patient">Patient</string>
    <string name="admin">Admin Staff</string>
    <string name="doctor">Doctor</string>

</resources>