<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="192dp"
            android:layout_height="189dp"
            android:layout_gravity="center"
            android:layout_marginTop="160dp"
            android:src="@drawable/logo"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="250dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:drawablePadding="8dp"
            android:fontFamily="sans-serif"
            android:text="GI-Clinic"
            android:textAlignment="center"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="250dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/person"
            android:drawablePadding="8dp"
            android:hint="UseriD"
            android:inputType="text"
            android:maxLines="1" />

        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
            android:id="@+id/passwordText"
            android:layout_width="250dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            android:hint="Password"
            android:inputType="textPassword"
            app:additionalTouchTargetSize="100dp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioBtnPatient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:defaultFocusHighlightEnabled="true"
                android:gravity="center"
                android:onClick="checkButton"
                android:text="@string/patient" />

            <RadioButton
                android:id="@+id/radioBtnAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/admin" />

            <RadioButton
                android:id="@+id/radioBtnDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/doctor" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signButton"
            android:layout_width="181dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:background="@drawable/roundedbutton"
            android:text="Sign In"
            android:textColor="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgetPassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:text="Forget Password?"
            android:textAlignment="center"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="Create an account"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>